# HellDivers2-TacPad

./: 28DisplayTest.ino  CMakeLists.txt  Display_ST7789.cpp  Display_ST7789.h  README.md  SD_Card.cpp.bak  SD_Card.h.bak  SquareLine_Project.sll  SquareLine_Project.spj  Stratagem_Selection.c  Stratagem_Selection.h  Touch_CST328.cpp  filelist.txt  stratagems_table.c  stratagems_table.h  ui.c  ui.h  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_comp_hook.c  ui_events.c  ui_events.h  ui_font_Font1.c  ui_helpers.c  ui_helpers.h  ui_img_1248868215.c  ui_img_233946757.c  ui_img_273215554.c  ui_img_312027341.c  ui_img_862212208.c  ui_img_903157970.c  ui_img_arc_thrower_stratagem_icon_png.c  ui_img_commando_stratagem_icon_png.c  ui_img_eagle_airstrike_stratagem_icon_png.c  ui_img_hd2readyupbar_png.c  ui_img_hd2slect_stratagems_png.c  ui_img_hd2togglereadyupbar_png.c  (+12 more)
stratagems/: ui_img_airburst_rocket_launcher_stratagem_icon_png.c  ui_img_anti-materiel_rifle_stratagem_icon_png.c  ui_img_anti-personnel_minefield_stratagem_icon_png.c  ui_img_anti-tank_emplacement_stratagem_icon_png.c  ui_img_anti-tank_mines_stratagem_icon_png.c  ui_img_arc_thrower_stratagem_icon_png.c  ui_img_autocannon_sentry_stratagem_icon_png.c  ui_img_autocannon_stratagem_icon_png.c  ui_img_ballistic_shield_backpack_stratagem_icon_png.c  ui_img_dark_fluid_vessel_stratagem_icon_png.c  ui_img_directional_shield_stratagem_icon_png.c  ui_img_eagle_110mm_rocket_pods_stratagem_icon_png.c  ui_img_eagle_500kg_bomb_stratagem_icon_png.c  ui_img_eagle_airstrike_stratagem_icon_png.c  (+60 more)
